--- a/src/php.ini
+++ b/src/php.ini
@@ -1,5 +1,5 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;      Warning Handling      ;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-
-display_errors = off
+display_errors = off ; set display error off
+session.gc_maxlifetime = 10800 ; php session timeout 
+disable_functions =exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source ; disable php functions
+allow_url_fopen=Off ; disable file open from url
+allow_url_include=Off; disable url inclusion
