--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD="7:2,M4AytU:Rf7092qp1"
+MYSQL_ROOT_PASSWORD=7:2,M4AytU:Rf7092qp1
 MYSQL_PASSWORD=7:2,M4AytU:Rf7
 MYSQL_USER=cylang
 MYSQL_DATABASE=logindb
